Sat Feb 14 18:57:10 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): handle EBADF of select as well.
	  [ruby-core:21264]

Mon Feb  9 12:02:29 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/open-uri.rb: add :read_timeout option.
	  [ruby-core:4848] (r9166)
	  (:proxy_http_basic_authentication): new option. (r9336)
	  (OpenURI.open_loop): prohibit multiple proxy options. (r9339)
	  (OpenURI.open_loop): find_proxy should return nil when proxy
	  does not exist. [ruby-dev:27630] (r9500)
	  (:ssl_verify_mode): new option suggested by Will Glynn. (r9958)
	  (:ssl_ca_cert): new option. (r9958, r13691)
	  (:ftp_active_mode) new option. (r13307)
	  (URI::FTP.buffer_open) turn ftp passive mode on if
	  :ftp_active_mode => false is given.
	  (:redirect) new option to disable redirection. (r13788)
	  (OpenURI::HTTPRedirect): new exception class for
	  redirection. (r13788)
	  (OpenURI::Buffer): use Meta ===.  [ruby-core:14295] (r14609)
	  (OpenURI::Meta#content_type_parse): fix
	  tests. [ruby-dev:33336] (r15200)
	  (OpenURI.open_http): rescue URI::InvalidURIError by URI.parse
	  for location URI. (r15406)
	  Fix a typo and remove trailing spaces. (r16810, r19345)

Mon Feb  9 01:21:16 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (unix_recv_io): relax msg_controllen error
	  check for x86_64-openbsd4.4.

Thu Feb  5 21:01:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (darwin): get rid of strange settings issue of
	  apple gcc port, which searches /usr/local/include always but
	  /usr/local/lib not.

	* ext/readline/readline.c (Init_readline): suppress warnings with
	  libedit.

Tue Feb  3 18:35:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/thread/thread.c (rb_queue_pop, rb_queue_push): should not lock
	  mutex if got an exception while waiting, and should ensure unlocked
	  after signaled.  [ruby-dev:37545]

Tue Feb  3 12:27:19 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
