@@ -1,3 +1,11 @@
+Sun Feb 15 21:07:05 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/ostruct.rb (OpenStruct#inspect): fixed the recursion check.
+	  Patch by Kornelius Kalnbach.  [ruby-core:20992].
+
+	* test/ostruct/test_ostruct.rb: test for inspect.
+	  Patch by Kornelius Kalnbach.  [ruby-core:20992].
+
 Sat Feb 14 18:57:10 2009  Tanaka Akira  <akr@fsij.org>
 
 	* eval.c (rb_thread_schedule): handle EBADF of select as well.
